--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -5,15 +5,15 @@ pipeline {
     }
     agent {
       node {
-        //TODO: Add label for Node.js jenkins agent
+        label 'nodejs'
       }
     }
 
     environment {
         //TODO: Edit these vars as per your env
-        DEV_PROJECT = "youruser-books-dev"
-        STAGE_PROJECT = "youruser-books-stage"
-        APP_GIT_URL = "https://github.com/youruser/DO288-apps"
+        DEV_PROJECT = "shanai-books-dev"
+        STAGE_PROJECT = "shanai-books-stage"
+        APP_GIT_URL = "https://github.com/shiseihanai/DO288-apps"
         NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/nodejs"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
